--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/colomfernando/base-react-styled/issues"
   },
-  "homepage": "https://github.com/colomfernando/base-react-styled#readme"
+  "homepage": "https://github.com/colomfernando/base-react-styled#readme",
+  "devDependencies": {
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
