--- a/package.json
+++ b/package.json
@@ -19,11 +19,38 @@
 	},
 	"homepage": "https://github.com/colomfernando/base-react-styled#readme",
 	"devDependencies": {
+		"@babel/cli": "^7.5.5",
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/preset-react": "^7.0.0",
+		"babel-eslint": "^10.0.2",
+		"babel-loader": "^8.0.6",
+		"babel-plugin-styled-components": "^1.10.6",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^5.0.4",
+		"eslint": "^6.1.0",
+		"eslint-config-airbnb": "^17.1.1",
+		"eslint-config-prettier": "^6.0.0",
+		"eslint-import-resolver-webpack": "^0.11.1",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-module-resolver": "^0.13.0",
+		"eslint-plugin-prettier": "^3.1.0",
+		"eslint-plugin-react": "^7.14.3",
+		"html-webpack-plugin": "^3.2.0",
+		"husky": "^3.0.2",
+		"lint-staged": "^9.2.1",
+		"prettier": "^1.18.2",
 		"webpack": "^4.39.1",
 		"webpack-cli": "^3.3.6",
 		"webpack-dev-server": "^3.7.2"
 	},
 	"dependencies": {
+		"@babel/polyfill": "^7.4.4",
+		"core-js": "^3.1.4",
+		"path": "^0.12.7",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
