install jest and setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,10 @@
 {
 	"parser": "babel-eslint",
-	"extends": [
-		"airbnb",
-		"plugin:react/recommended",
-		"prettier",
-		"prettier/react"
-	],
+	"extends": ["airbnb", "plugin:react/recommended", "prettier", "prettier/react"],
 	"plugins": ["react", "import", "prettier", "module-resolver"],
 	"env": {
-		"browser": true
+		"browser": true,
+		"jest": true
 	},
 	"settings": {
 		"import/resolver": {
