--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "base proyect with react and styled component",
 	"main": "index.js",
 	"scripts": {
-		"test": "test",
+		"test": "jest",
 		"start": "webpack-dev-server --config webpack.dev.js",
 		"build": "webpack --config webpack.prod.js"
 	},
@@ -41,6 +41,7 @@
 		"eslint-plugin-react": "^7.14.3",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^3.0.2",
+		"jest": "^24.8.0",
 		"lint-staged": "^9.2.1",
 		"prettier": "^1.18.2",
 		"webpack": "^4.39.1",
